@@ -2,6 +2,7 @@ update-manager (1:0.66) gutsy; urgency=low
 
   * DistUpgrade/DistUpgradeControler.py:
     - support listing and fetching of upgrade PreRequists
+    - transition archive.canonical.com to new layout
   * DistUpgrade/DistUpgradeControler.py:
     - implement Depends checking for the selected
       View
